[project]
name = "5g-cluster"
version = "0.1.0"
description = ""
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.15.5,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
